--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "accesscontrol": "^2.2.1",
+        "bcrypt": "^5.0.0",
         "body-parser": "*",
         "express": "*",
         "express-healthcheck": "*",
+        "jsonwebtoken": "^8.5.1",
         "lodash": "^4.17.20",
         "mongoose": "*",
         "randomstring": "^1.1.5",
